# ev-store-dlrm

./: .gitignore  README.md  dlrm_data_pytorch.py  dlrm_s_pytorch.py  dlrm_s_pytorch_C1.py  dlrm_s_pytorch_C1_C2.py  dlrm_s_pytorch_C1_C2_C3.py  dlrm_s_pytorch_lock_gpu_C1.py  evstore_utils.py  experiments.md
bench/: dlrm_s_criteo_kaggle.sh  dlrm_s_criteo_kaggle_C1.sh  dlrm_s_criteo_kaggle_C1_C2.sh  dlrm_s_criteo_kaggle_C1_C2_C3.sh  dlrm_s_criteo_kaggle_lock_gpu_C1.sh
cache_algo/: EvLFU_C1.py  LFU.py  LRU.py  cpp_socket_client.py
emb_storage/: file_read.py  mmap_file_read.py  storage_dummy.py  storage_manager.py  storage_rocksdb.py  storage_rocksdb_26_tabs.py  storage_sqlite.py  storage_sqlite_26_tabs.py
input/: .gitignore  readme.txt
logs/: .gitignore  sample-inference-criteo_kaggle_5mil.txt  sample-inference-criteo_kaggle_all.txt  sample-train-criteo_kaggle_5mil.txt
misc/: README.txt
misc/testing_tensor_cpp/: CMakeLists.txt  evlfu_tensor.cpp  evlfu_tensor.hpp  sample_client.py
mixed_precs_caching/: aprx_embedding.cpp  aprx_embedding.hpp  cache_manager.cpp  cache_manager.hpp  dlrm_client.py  evlfu_16.cpp  evlfu_16.hpp  evlfu_32.cpp  evlfu_32.hpp  evlfu_4.cpp  evlfu_4.hpp  evlfu_8.cpp  evlfu_8.hpp  test.cpp  test.py
script/: apply_ev_preconditioning.py  compress_folder_for_github.sh  convert_altkeys_to_binary.py  convert_ev_to_binary.py  dissectingmodel.py  free_page_cache.sh  gnuplot_cdf_direct_io.plt  gnuplot_cdf_evlfu_lru.plt  gnuplot_cdf_multi_line.plt  modify_param.py  mount_cham_obj_stor.sh  plot_cdf.py  read_cham_obj_stor.sh  reduce_precision.py  (+2 more)
(+36 files in other folders)
